--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -30,7 +30,7 @@
     "$$\n",
     "Also note that\n",
     "$$\n",
-    "\\begin{align} \n",
+    "\\begin{aligned} \n",
     "x^TAx &=\\begin{bmatrix}x_1 & x_2 & \\cdots & x_n\\end{bmatrix}.\\begin{bmatrix}a_{11}x_1+a_{12}x_2+\\cdots+a_{1n}x_n \\\\ a_{21}x_1+a_{22}x_2+\\cdots+a_{2n}x_n \\\\ \\vdots \\\\ a_{n1}x_1+a_{n2}x_2+\\cdots+a_{nn}x_n\\end{bmatrix}\\\\\n",
     "&=x_1(a_{11}x_1+\\cdots+a_{1n}x_n)+x_2(a_{21}x_1+\\cdots+a_{2n}x_n)+\\cdots+x_n(a_{n1}x_1+\\cdots+a_{nn}x_n)\\\\\n",
     "\\implies \\frac{\\partial}{\\partial x_1}X^TAx & = (2a_{11}x_1+a_{12}x_2+\\cdots+a_{1n}x_n)+ a_{21}x_2+\\cdots+a_{n1}x_n\\\\\n",
@@ -38,7 +38,7 @@
     "\\text{Similarly, for } 1 \\leq i \\leq 1 \\implies \\frac{\\partial}{\\partial x_i}X^TAx & = (a_{i1}x_1+a_{i2}x_2+\\cdots+a_{in}x_n)+ (a_{1i}x_1+a_{2i}x_2+\\cdots+a_{ni}x_n)\\\\\n",
     "\\implies \\nabla x^TAx & = \\begin{bmatrix}\\frac{\\partial}{\\partial x_1}x^TAx \\\\ \\frac{\\partial}{\\partial x_2}x^TAx \\\\ \\vdots \\\\ \\frac{\\partial}{\\partial x_n}x^TAx\\end{bmatrix}=\\begin{bmatrix}a_{11}x_1+a_{12}x_2+\\cdots+a_{1n}x_n \\\\ a_{21}x_1+a_{22}x_2+\\cdots+a_{2n}x_n \\\\ \\vdots \\\\ a_{n1}x_1+a_{n2}x_2+\\cdots+a_{nn}x_n\\end{bmatrix}+\\begin{bmatrix}a_{11}x_1+a_{21}x_2+\\cdots+a_{n1}x_n \\\\ a_{12}x_1+a_{22}x_2+\\cdots+a_{n2}x_n \\\\ \\vdots \\\\ a_{1n}x_1+a_{2n}x_2+\\cdots+a_{nn}x_n\\end{bmatrix}\\\\\n",
     "\\implies \\nabla x^TAx & = (A+A^T)x\\\\\n",
-    "\\end{align}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "\n",
