--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -28,27 +28,34 @@
     "$$\n",
     "\\nabla b^Tx = \\begin{bmatrix}\\frac{\\partial}{\\partial x_1}(b_1x_1+b_2x_2+\\cdots+b_nx_n) \\\\ \\frac{\\partial}{\\partial x_2}(b_1x_1+b_2x_2+\\cdots+b_nx_n) \\\\ \\vdots \\\\ \\frac{\\partial}{\\partial x_n}(b_1x_1+b_2x_2+\\cdots+b_nx_n) \\end{bmatrix} = \\begin{bmatrix}b_1 \\\\ b_2 \\\\ \\vdots \\\\ b_n\\end{bmatrix} = b\n",
     "$$\n",
+    "\n",
     "Also note that\n",
     "$$\n",
-    "\\begin{aligned} \n",
+    "\\begin{align} \n",
     "x^TAx &=\\begin{bmatrix}x_1 & x_2 & \\cdots & x_n\\end{bmatrix}.\\begin{bmatrix}a_{11}x_1+a_{12}x_2+\\cdots+a_{1n}x_n \\\\ a_{21}x_1+a_{22}x_2+\\cdots+a_{2n}x_n \\\\ \\vdots \\\\ a_{n1}x_1+a_{n2}x_2+\\cdots+a_{nn}x_n\\end{bmatrix}\\\\\n",
+    "&&\\\\\n",
     "&=x_1(a_{11}x_1+\\cdots+a_{1n}x_n)+x_2(a_{21}x_1+\\cdots+a_{2n}x_n)+\\cdots+x_n(a_{n1}x_1+\\cdots+a_{nn}x_n)\\\\\n",
+    "&&\\\\\n",
     "\\implies \\frac{\\partial}{\\partial x_1}X^TAx & = (2a_{11}x_1+a_{12}x_2+\\cdots+a_{1n}x_n)+ a_{21}x_2+\\cdots+a_{n1}x_n\\\\\n",
+    "&&\\\\\n",
     "& = (a_{11}x_1+a_{12}x_2+\\cdots+a_{1n}x_n)+ (a_{11}x_1+a_{21}x_2+\\cdots+a_{n1}x_n)\\\\\n",
+    "&&\\\\\n",
     "\\text{Similarly, for } 1 \\leq i \\leq 1 \\implies \\frac{\\partial}{\\partial x_i}X^TAx & = (a_{i1}x_1+a_{i2}x_2+\\cdots+a_{in}x_n)+ (a_{1i}x_1+a_{2i}x_2+\\cdots+a_{ni}x_n)\\\\\n",
-    "\\implies \\nabla x^TAx & = \\begin{bmatrix}\\frac{\\partial}{\\partial x_1}x^TAx \\\\ \\frac{\\partial}{\\partial x_2}x^TAx \\\\ \\vdots \\\\ \\frac{\\partial}{\\partial x_n}x^TAx\\end{bmatrix}=\\begin{bmatrix}a_{11}x_1+a_{12}x_2+\\cdots+a_{1n}x_n \\\\ a_{21}x_1+a_{22}x_2+\\cdots+a_{2n}x_n \\\\ \\vdots \\\\ a_{n1}x_1+a_{n2}x_2+\\cdots+a_{nn}x_n\\end{bmatrix}+\\begin{bmatrix}a_{11}x_1+a_{21}x_2+\\cdots+a_{n1}x_n \\\\ a_{12}x_1+a_{22}x_2+\\cdots+a_{n2}x_n \\\\ \\vdots \\\\ a_{1n}x_1+a_{2n}x_2+\\cdots+a_{nn}x_n\\end{bmatrix}\\\\\n",
+    "&&\\\\\n",
+    "\\implies \\nabla x^TAx & = \\begin{bmatrix}\\frac{\\partial}{\\partial x_1}x^TAx \\\\ \\frac{\\partial}{\\partial x_2}x^TAx \\\\ \\vdots \\\\ \\frac{\\partial}{\\partial x_n}x^TAx\\end{bmatrix}\\\\\n",
+    "&&\\\\\n",
+    "&=\\begin{bmatrix}a_{11}x_1+a_{12}x_2+\\cdots+a_{1n}x_n \\\\ a_{21}x_1+a_{22}x_2+\\cdots+a_{2n}x_n \\\\ \\vdots \\\\ a_{n1}x_1+a_{n2}x_2+\\cdots+a_{nn}x_n\\end{bmatrix}+\\begin{bmatrix}a_{11}x_1+a_{21}x_2+\\cdots+a_{n1}x_n \\\\ a_{12}x_1+a_{22}x_2+\\cdots+a_{n2}x_n \\\\ \\vdots \\\\ a_{1n}x_1+a_{2n}x_2+\\cdots+a_{nn}x_n\\end{bmatrix}\\\\\n",
+    "&&\\\\\n",
     "\\implies \\nabla x^TAx & = (A+A^T)x\\\\\n",
-    "\\end{aligned}\n",
+    "\\end{align}\n",
     "$$\n",
     "\n",
     "\n",
-    "$$\\bbox[5px, border:2px solid black]\n",
-    "{\n",
+    "$$\n",
     "\\begin{align}\n",
     "\\therefore \\nabla f(x) & = \\frac{1}{2}(A+A^T)x+b\\\\\n",
     "\\text{if } A = A^T,  \\nabla f(x) & = Ax+b \n",
     "\\end{align}\n",
-    "}\n",
     "$$\n",
     "\n",
     "#### Problem2\n",
@@ -141,8 +148,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -162,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
