--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -11,7 +11,7 @@
     "* $A \\in \\mathbb{R}^{nxn}$ is symmetric if $A^T = A$, that is $A_{ij}=A{ji}, \\forall i,j$\n",
     "* Gradient $\\nabla f(x)$ of a function $f:\\mathbb{R}^n\\to\\mathbb{R}$ is defined as  \n",
     "  $$\n",
-    "  \\nabla f(x)= \\left[\\frac{\\partial}{\\partial x_1}f(x) \\\\ \\vdots \\\\ \\frac{\\partial}{\\partial x_n}f(x)\\right] \\text{      where } x = \\left[x_1\\\\ \\vdots \\\\ x_n\\right]\n",
+    "  \\nabla f(x)= \\begin{bmatrix}\\frac{\\partial}{\\partial x_1}f(x) \\\\ \\vdots \\\\ \\frac{\\partial}{\\partial x_n}f(x)\\end{bmatrix} \\text{      where } x = \\begin{bmatrix}x_1\\\\ \\vdots \\\\ x_n\\end{bmatrix}\n",
     "  $$\n",
     "  \n",
     "* The hessian $\\nabla^2 f(x)$ of a function $f:\\mathbb{R}^n\\to\\mathbb{R}$ is the $nxn$ symmetric matrix of twice partial derivatives,\n",
