--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -6,12 +6,45 @@
    "source": [
     "# Notes on Linear Algebra from Stanford [CS 229](http://cs229.stanford.edu/materials/ps0.pdf)\n",
     "\n",
+    "## 0. Test Latex display on Github\n",
+    "$$\n",
+    "Var[X] = E[(X - E[X])'(X - E[X])] = E[X'X - X'E[X] - E[X]'X + E[X]'E[X]]\n",
+    "$$\n",
+    "$$\n",
+    "= E[X'X] - E[X]'E[X] = \n",
+    "E\\left[\n",
+    "\\begin{pmatrix}\n",
+    "X_1 & X_2\n",
+    "\\end{pmatrix}\n",
+    "\\begin{pmatrix}\n",
+    "X_1 \\\\ X_2\n",
+    "\\end{pmatrix} -\n",
+    "\\begin{pmatrix}\n",
+    "E[X_1] & E[X_2]\n",
+    "\\end{pmatrix}\n",
+    "\\begin{pmatrix}\n",
+    "E[X_1] \\\\ E[X_2]\n",
+    "\\end{pmatrix}\n",
+    "\\right]\n",
+    "$$\n",
+    "$$\n",
+    "= \\begin{pmatrix}\n",
+    "E[X_1^2] - E[X_1]^2 & E[X_1X_2] - E[X_1]E[X_2] \\\\\n",
+    "E[X_2X_1] - E[X_2]E[X_1] & E[X_2^2] - E[X_2]^2\n",
+    "\\end{pmatrix}\n",
+    "= \\begin{pmatrix}\n",
+    "Var[X_1] & Cov[X_1,X_2] \\\\\n",
+    "Cov[X_1,X_2] & Var[X_2].\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "\n",
     "## 1. Gradients & Hessians\n",
     "\n",
     "* $A \\in \\mathbb{R}^{nxn}$ is symmetric if $A^T = A$, that is $A_{ij}=A{ji}, \\forall i,j$\n",
     "* Gradient $\\nabla f(x)$ of a function $f:\\mathbb{R}^n\\to\\mathbb{R}$ is defined as  \n",
     "  $$\n",
-    "  \\nabla f(x)= \\begin{bmatrix}\\frac{\\partial}{\\partial x_1}f(x) \\\\ \\vdots \\\\ \\frac{\\partial}{\\partial x_n}f(x)\\end{bmatrix} \\text{      where } x = \\begin{bmatrix}x_1\\\\ \\vdots \\\\ x_n\\end{bmatrix}\n",
+    "  \\nabla f(x)= \\begin{bmatrix}\\frac{\\partial}{\\partial x_1}f(x) \\\\ \\vdots \\\\ \\frac{\\partial}{\\partial x_n}f(x)\\end{bmatrix}\n",
+    "  \\text{      where } x = \\begin{bmatrix}x_1\\\\ \\vdots \\\\ x_n\\end{bmatrix}\n",
     "  $$\n",
     "  \n",
     "* The hessian $\\nabla^2 f(x)$ of a function $f:\\mathbb{R}^n\\to\\mathbb{R}$ is the $nxn$ symmetric matrix of twice partial derivatives,\n",
