--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -13,7 +13,7 @@
     "* Gradient $\\nabla f(x)$ of a function $f:\\mathbb{R}^n\\to\\mathbb{R}$ is defined as  \n",
     "  $$\n",
     "  \\nabla f(x)= \\begin{bmatrix}\\frac{\\partial}{\\partial x_1}f(x) \\\\ \\vdots \\\\ \\frac{\\partial}{\\partial x_n}f(x)\\end{bmatrix}\n",
-    "  \\text{ where } x = \\begin{bmatrix}x_1\\\\ \\vdots \\\\ x_n\\end{bmatrix}\n",
+    "    \\text{ where } x = \\begin{bmatrix}x_1\\\\ \\vdots \\\\ x_n\\end{bmatrix}\n",
     "  $$\n",
     "  \n",
     "* The hessian $\\nabla^2 f(x)$ of a function $f:\\mathbb{R}^n\\to\\mathbb{R}$ is the $nxn$ symmetric matrix of twice partial derivatives,\n",
@@ -27,10 +27,11 @@
     "\n",
     "#### Solution to Problem1\n",
     "We observe that\n",
+    "\n",
     "$$\n",
     "\\nabla b^Tx = \\begin{bmatrix}\\frac{\\partial}{\\partial x_1}(b_1x_1+b_2x_2+\\cdots+b_nx_n) \\\\ \\frac{\\partial}{\\partial x_2}(b_1x_1+b_2x_2+\\cdots+b_nx_n) \\\\ \\vdots \\\\ \\frac{\\partial}{\\partial x_n}(b_1x_1+b_2x_2+\\cdots+b_nx_n) \\end{bmatrix}\n",
-    "\n",
-    "= \\begin{bmatrix}b_1 \\\\ b_2 \\\\ \\vdots \\\\ b_n\\end{bmatrix} = b\n",
+    "= \\begin{bmatrix}b_1 \\\\ b_2 \\\\ \\vdots \\\\ b_n\\end{bmatrix}\n",
+    "= b\n",
     "$$\n",
     "\n",
     "Also note that\n",
