--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -57,15 +57,13 @@
     "+\\begin{bmatrix}a_{11}x_1+a_{21}x_2+\\cdots+a_{n1}x_n \\\\ a_{12}x_1+a_{22}x_2+\\cdots+a_{n2}x_n \\\\ \\vdots \\\\ a_{1n}x_1+a_{2n}x_2+\\cdots+a_{nn}x_n\\end{bmatrix}\\\\\n",
     "$$\n",
     "$$\n",
-    "\\implies \\nabla x^TAx = (A+A^T)x\\\\\n",
+    "\\implies \\nabla x^TAx = (A+A^T)x\n",
     "$$\n",
-    "\n",
-    "\n",
     "$$\n",
-    "\\begin{align}\n",
-    "\\therefore \\nabla f(x) & = \\frac{1}{2}(A+A^T)x+b\\\\\n",
-    "\\text{if } A = A^T,  \\nabla f(x) & = Ax+b \n",
-    "\\end{align}\n",
+    "\\therefore \\nabla f(x) = \\frac{1}{2}(A+A^T)x+b\n",
+    "$$\n",
+    "$$\n",
+    "\\text{if } A = A^T,  \\nabla f(x) = Ax+b \n",
     "$$\n",
     "\n",
     "#### Problem2\n",
