--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -13,7 +13,7 @@
     "* Gradient $\\nabla f(x)$ of a function $f:\\mathbb{R}^n\\to\\mathbb{R}$ is defined as  \n",
     "  $$\n",
     "  \\nabla f(x)= \\begin{bmatrix}\\frac{\\partial}{\\partial x_1}f(x) \\\\ \\vdots \\\\ \\frac{\\partial}{\\partial x_n}f(x)\\end{bmatrix}\n",
-    "    \\text{ where } x = \\begin{bmatrix}x_1\\\\ \\vdots \\\\ x_n\\end{bmatrix}\n",
+    "   \\quad{}\\text{where}\\quad{}x = \\begin{bmatrix}x_1\\\\ \\vdots \\\\ x_n\\end{bmatrix}\n",
     "  $$\n",
     "  \n",
     "* The hessian $\\nabla^2 f(x)$ of a function $f:\\mathbb{R}^n\\to\\mathbb{R}$ is the $nxn$ symmetric matrix of twice partial derivatives,\n",
@@ -22,10 +22,10 @@
     "  \\nabla^2 f(x) = \\begin{bmatrix}\\frac{\\partial^2}{\\partial^2 x_{1}^{2}}f(x) & \\frac{\\partial^2}{\\partial^2 x_1x_2}f(x) & \\cdots & \\frac{\\partial^2}{\\partial^2 x_1x_n}f(x) \\\\ \\frac{\\partial^2}{\\partial^2 x_2x_1}f(x) & \\frac{\\partial^2}{\\partial^2 x_{2}^{2}}f(x) & \\cdots & \\frac{\\partial^2}{\\partial^2 x_2x_n}f(x)\\\\ \\vdots & \\vdots & \\ddots & \\vdots \\\\ \\frac{\\partial^2}{\\partial^2 x_nx_1}f(x) & \\frac{\\partial^2}{\\partial^2 x_nx_2}f(x) & \\cdots & \\frac{\\partial^2}{\\partial^2 x_{n}^{2}}f(x)\\end{bmatrix}\n",
     "  $$\n",
     "  \n",
-    "#### Problem1\n",
+    "#### Problem a\n",
     "* Let $f(x)=\\frac{1}{2}x^TAx+b^Tx$, where $A$ is an $nxn$ matrix and $b \\in \\mathbb{R}^n$ is a vector. What is $\\nabla f(x)$? What if A is a symmetric matrix?\n",
     "\n",
-    "#### Solution to Problem1\n",
+    "#### Solution to Problem a\n",
     "We observe that\n",
     "\n",
     "$$\n",
@@ -59,6 +59,9 @@
     "$$\n",
     "\\implies \\nabla x^TAx = (A+A^T)x\n",
     "$$\n",
+    "\n",
+    "\n",
+    "\n",
     "$$\n",
     "\\therefore \\nabla f(x) = \\frac{1}{2}(A+A^T)x+b\n",
     "$$\n",
@@ -66,39 +69,38 @@
     "\\text{if } A = A^T,  \\nabla f(x) = Ax+b \n",
     "$$\n",
     "\n",
-    "#### Problem2\n",
+    "#### Problem b\n",
     "* Let $f(x)=\\frac{1}{2}x^TAx+b^Tx$, where $A$ is an $nxn$ matrix and $b \\in \\mathbb{R}^n$ is a vector. What is $\\nabla^2 f(x)$? What if A is a symmetric matrix?\n",
     "\n",
-    "#### Solution to Problem2\n",
-    "In Problem 1 we have shown that, \n",
+    "#### Solution to Problem b\n",
+    "In Problem a we have shown that, \n",
     "$$\n",
-    "\\begin{align}\n",
-    "\\frac{\\partial}{\\partial x_i}b^T{x} &= b_i \\quad{}\\text{for  } 1 \\leq i \\leq n\\\\\n",
-    "\\implies \\frac{\\partial^2}{\\partial x_jx_i}b^T{x} & = 0 \\quad{}\\text{for  } 1 \\leq i,j \\leq n\\\\\n",
-    "\\implies \\nabla^2 b^Tx & = 0\n",
-    "\\end{align}\n",
+    "\\frac{\\partial}{\\partial x_i}b^T{x} = b_i \\quad{}\\text{for  } 1 \\leq i \\leq n\n",
     "$$\n",
-    "In Problem 1 we have also shown that,\n",
     "$$\n",
-    "\\begin{align}\n",
-    "\\frac{\\partial}{\\partial x_i}X^TAx & = (a_{i1}x_1+a_{i2}x_2+\\cdots+a_{in}x_n)+ (a_{1i}x_1+a_{2i}x_2+\\cdots+a_{ni}x_n) \\quad{}\\text{for  } 1 \\leq i \\leq n\\\\\n",
-    "\\implies \\frac{\\partial^2}{\\partial x_jx_i}X^TAx & = (a_{ij})+(a_{ji}) \\quad{}\\text{for  } 1 \\leq i,j \\leq n\\\\\n",
-    "&\\\\\n",
-    "\\end{align}\n",
+    "\\text{Thus,}\\quad{} \\frac{\\partial^2}{\\partial x_jx_i}b^T{x} = 0 \\quad{}\\text{for  } 1 \\leq i,j \\leq n\n",
     "$$\n",
-    "$$\\bbox[5px, border:2px solid black]\n",
-    "{\n",
-    "\\begin{align}\n",
-    "\\therefore \\nabla^2 f(x) & = \\frac{1}{2}(A+A^T)\\\\\n",
-    "\\text{if } A = A^T,  \\nabla^2 f(x) & = A \n",
-    "\\end{align}\n",
-    "}\n",
+    "$$\n",
+    "\\implies \\nabla^2 b^Tx = 0\n",
+    "$$\n",
+    "In Problem a we have also shown that,\n",
+    "$$\n",
+    "\\frac{\\partial}{\\partial x_i}X^TAx = (a_{i1}x_1+a_{i2}x_2+\\cdots+a_{in}x_n)+ (a_{1i}x_1+a_{2i}x_2+\\cdots+a_{ni}x_n) \\quad{}\\text{for  } 1 \\leq i \\leq n\n",
+    "$$\n",
+    "$$\n",
+    "\\implies \\frac{\\partial^2}{\\partial x_jx_i}X^TAx = (a_{ij})+(a_{ji}) \\quad{}\\text{for  } 1 \\leq i,j \\leq n\n",
+    "$$\n",
+    "$$\n",
+    "\\therefore \\nabla^2 f(x) = \\frac{1}{2}(A+A^T)\n",
+    "$$\n",
+    "$$\n",
+    "\\text{if}\\quad{} A = A^T,\\quad{}\\nabla^2 f(x) = A \n",
     "$$\n",
     "\n",
-    "#### Problem3\n",
+    "#### Problem c\n",
     "* Let $f(x)=g(h(x))$, where $g:\\mathbb{R}\\to\\mathbb{R}$ is differentiable and $h:\\mathbb{R}^n\\to\\mathbb{R}$ is differentiable. What is $\\nabla f(x)$?\n",
     "\n",
-    "#### Solution to Problem3\n",
+    "#### Solution to Problem c\n",
     "Since $g$ and $h$ are differentiable functions, f is differentiable &\n",
     "$$\n",
     "\\begin{align}\n",
@@ -115,10 +117,10 @@
     "}\n",
     "$$\n",
     "\n",
-    "#### Problem4\n",
+    "#### Problem d\n",
     "* Let $f(x)=g(\\mathbf{a}^Tx)$, where $g:\\mathbb{R}\\to\\mathbb{R}$ is continuously differentiable and $\\mathbf{a} \\in \\mathbb{R}^n$. What are $\\nabla f(x)$ and $\\nabla^2 f(x)$?. (Hint: your expression for $\\nabla^2 f(x)$ may have as few as 11 symbols including ' and parentheses.)\n",
     "\n",
-    "#### Solution to Problem4\n",
+    "#### Solution to Problem d\n",
     "First we calculate $\\nabla f(x)$.\n",
     "$$\n",
     "\\begin{align}\n",
