--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -13,7 +13,7 @@
     "* Gradient $\\nabla f(x)$ of a function $f:\\mathbb{R}^n\\to\\mathbb{R}$ is defined as  \n",
     "  $$\n",
     "  \\nabla f(x)= \\begin{bmatrix}\\frac{\\partial}{\\partial x_1}f(x) \\\\ \\vdots \\\\ \\frac{\\partial}{\\partial x_n}f(x)\\end{bmatrix}\n",
-    "   \\quad{}\\text{where}\\quad{}x = \\begin{bmatrix}x_1\\\\ \\vdots \\\\ x_n\\end{bmatrix}\n",
+    "   \\;\\text{where}\\;x = \\begin{bmatrix}x_1\\\\ \\vdots \\\\ x_n\\end{bmatrix}\n",
     "  $$\n",
     "  \n",
     "* The hessian $\\nabla^2 f(x)$ of a function $f:\\mathbb{R}^n\\to\\mathbb{R}$ is the $nxn$ symmetric matrix of twice partial derivatives,\n",
