--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "Also note that\n",
     "$$\n",
-    "x^TAx =\\begin{bmatrix}x_1 & x_2 & \\cdots & x_n\\end{bmatrix}\n",
+    "x^TAx =\\begin{bmatrix}x_1 & x_2 & \\cdots & x_n\\end{bmatrix}\\cdot\n",
     "\\begin{bmatrix}a_{11}x_1+a_{12}x_2+\\cdots+a_{1n}x_n \\\\ a_{21}x_1+a_{22}x_2+\\cdots+a_{2n}x_n \\\\ \\vdots \\\\ a_{n1}x_1+a_{n2}x_2+\\cdots+a_{nn}x_n\\end{bmatrix}\n",
     "$$\n",
     "$$\n",
@@ -101,20 +101,12 @@
     "* Let $f(x)=g(h(x))$, where $g:\\mathbb{R}\\to\\mathbb{R}$ is differentiable and $h:\\mathbb{R}^n\\to\\mathbb{R}$ is differentiable. What is $\\nabla f(x)$?\n",
     "\n",
     "#### Solution to Problem c\n",
-    "Since $g$ and $h$ are differentiable functions, f is differentiable &\n",
+    "Since $g$ and $h$ are differentiable functions, f is differentiable, Furthermore, \n",
     "$$\n",
-    "\\begin{align}\n",
-    "&\\\\\n",
-    "\\frac{\\partial}{\\partial x_i}f(x) & = g'(h(x)).\\frac{\\partial}{\\partial x_i}h(x)\\quad{}\\text{for  } 1 \\leq i \\leq n\\\\\n",
-    "&\\\\\n",
-    "\\end{align}\n",
+    "\\frac{\\partial}{\\partial x_i}f(x) = g'(h(x)).\\frac{\\partial}{\\partial x_i}h(x)\\quad{}\\text{for}\\, 1 \\leq i \\leq n\n",
     "$$\n",
-    "$$\\bbox[5px, border:2px solid black]\n",
-    "{\n",
-    "\\begin{align}\n",
-    "\\therefore \\nabla f(x) & = g'(h(x)).\\nabla h(x)\\\\\n",
-    "\\end{align}\n",
-    "}\n",
+    "$$\n",
+    "\\therefore \\nabla f(x) = g'(h(x)).\\nabla h(x)\n",
     "$$\n",
     "\n",
     "#### Problem d\n",
@@ -123,33 +115,23 @@
     "#### Solution to Problem d\n",
     "First we calculate $\\nabla f(x)$.\n",
     "$$\n",
-    "\\begin{align}\n",
-    "\\frac{\\partial}{\\partial x_i}f(x) & = g'(\\mathbf{a}^Tx).\\frac{\\partial}{\\partial x_i}(\\mathbf{a}^Tx) \\quad{}\\text{for  } 1 \\leq i \\leq n\\\\\n",
-    "\\implies \\frac{\\partial}{\\partial x_i}f(x) & = g'(\\mathbf{a}^Tx).a_i \\quad{}\\text{for  } 1 \\leq i \\leq n\\\\\n",
-    "&\\\\\n",
-    "\\end{align}\n",
+    "\\frac{\\partial}{\\partial x_i}f(x) = g'(\\mathbf{a}^Tx).\\frac{\\partial}{\\partial x_i}(\\mathbf{a}^Tx) \\quad{}\\text{for}\\, 1 \\leq i \\leq n\n",
     "$$\n",
-    "$$\\bbox[5px, border:2px solid black]\n",
-    "{\n",
-    "\\begin{align}\n",
-    "\\therefore \\nabla f(x) & = g'(\\mathbf{a}^Tx).\\mathbf{a}\\\\\n",
-    "\\end{align}\n",
-    "}\n",
+    "$$\n",
+    "\\implies \\frac{\\partial}{\\partial x_i}f(x) = g'(\\mathbf{a}^Tx).a_i \\quad{}\\text{for  } 1 \\leq i \\leq n\\\\\n",
+    "$$\n",
+    "$$\n",
+    "\\therefore \\nabla f(x) = g'(\\mathbf{a}^Tx).\\mathbf{a}\\\\\n",
     "$$\n",
     "Next, we calculate $\\nabla^2 f(x)$.\n",
     "$$\n",
-    "\\begin{align}\n",
-    "\\frac{\\partial}{\\partial x_i}f(x) & = g'(\\mathbf{a}^Tx).a_i \\quad{}\\text{for  } 1 \\leq i \\leq n\\\\\n",
-    "\\implies \\frac{\\partial^2}{\\partial x_jx_i}f(x) & = g''(\\mathbf{a}^Tx).a_j.a_i \\quad{}\\text{for  } 1 \\leq i,j \\leq n\\\\\n",
-    "&\\\\\n",
-    "\\end{align}\n",
+    "\\frac{\\partial}{\\partial x_i}f(x) = g'(\\mathbf{a}^Tx).a_i \\quad{}\\text{for  } 1 \\leq i \\leq n\n",
     "$$\n",
-    "$$\\bbox[5px, border:2px solid black]\n",
-    "{\n",
-    "\\begin{align}\n",
-    "\\therefore \\nabla^2 f(x) & = g''(\\mathbf{a}^Tx)\\mathbf{a}\\mathbf{a}^T \\quad{}\\text{(Note : RHS has exactly 11 symbols)}\\\\\n",
-    "\\end{align}\n",
-    "}\n",
+    "$$\n",
+    "\\implies \\frac{\\partial^2}{\\partial x_jx_i}f(x) = g''(\\mathbf{a}^Tx).a_j.a_i \\quad{}\\text{for  } 1 \\leq i,j \\leq n\n",
+    "$$\n",
+    "$$\n",
+    "\\therefore \\nabla^2 f(x) = g''(\\mathbf{a}^Tx)\\mathbf{a}\\mathbf{a}^T \\,\\text{(Note : RHS has exactly 11 symbols)}\n",
     "$$\n",
     "\n",
     "\n",
