--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -131,11 +131,12 @@
     "\\implies \\frac{\\partial^2}{\\partial x_jx_i}f(x) = g''(\\mathbf{a}^Tx).a_j.a_i \\quad{}\\text{for  } 1 \\leq i,j \\leq n\n",
     "$$\n",
     "$$\n",
-    "\\therefore \\nabla^2 f(x) = g''(\\mathbf{a}^Tx)\\mathbf{a}\\mathbf{a}^T \\,\\text{(Note : RHS has exactly 11 symbols)}\n",
+    "\\therefore \\nabla^2 f(x) = g''(\\mathbf{a}^Tx)\\mathbf{a}\\mathbf{a}^T \n",
     "$$\n",
     "\n",
+    "Note1: RHS has exactly 11 symbols.\n",
     "\n",
-    "Note: Twice differentiability of $g$ is not a given from the condition in the problem. Perhaps the problem statement needs to be modified to state that $g$ is twice differentiable instead of continuously differentiable.\n",
+    "Note2: Twice differentiability of $g$ is not a given from the condition in the problem. Perhaps the problem statement needs to be modified to state that $g$ is twice differentiable instead of continuously differentiable.\n",
     "\n"
    ]
   },
