--- a/Linear_Algebra.ipynb
+++ b/Linear_Algebra.ipynb
@@ -49,7 +49,7 @@
     "= (a_{11}x_1+a_{12}x_2+\\cdots+a_{1n}x_n)+ (a_{11}x_1+a_{21}x_2+\\cdots+a_{n1}x_n)\n",
     "$$\n",
     "$$\n",
-    "\\text{Similarly, for } 1 \\leq i \\leq n \\frac{\\partial}{\\partial x_i}X^TAx = (a_{i1}x_1+a_{i2}x_2+\\cdots+a_{in}x_n)+ (a_{1i}x_1+a_{2i}x_2+\\cdots+a_{ni}x_n)\n",
+    "\\text{Similarly, for }\\,1 \\leq i \\leq n\\, \\frac{\\partial}{\\partial x_i}X^TAx = (a_{i1}x_1+a_{i2}x_2+\\cdots+a_{in}x_n)+ (a_{1i}x_1+a_{2i}x_2+\\cdots+a_{ni}x_n)\n",
     "$$\n",
     "$$\n",
     "\\implies \\nabla x^TAx = \\begin{bmatrix}\\frac{\\partial}{\\partial x_1}x^TAx \\\\ \\frac{\\partial}{\\partial x_2}x^TAx \\\\ \\vdots \\\\ \\frac{\\partial}{\\partial x_n}x^TAx\\end{bmatrix}\n",
